--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 								</a>
 							</li>
 						</ul>
+						
 					</div>
 				</div>
 			</div>
@@ -384,6 +385,7 @@
 					<div class="col-md-12 text-center markup">
 						<i class="fa fa-bookmark-o" aria-hidden="true"></i>
 					</div>
+					<font size="1"> This template was made by Wilmax Cruz. </font>
 				</div>
 			</div>
 		</div>
