--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 	<!-- Ícone -->
 	<link href="images/icons/favicon.ico" rel="shortcut icon">
     <link href="images/icons/touch.png" rel="apple-touch-icon-precomposed">
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135355756-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135355756-1');
+</script>
+
+	
 </head>
 <body>
 	<div class="container">
