--- a/index.html
+++ b/index.html
@@ -160,21 +160,19 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Does Gamified Educational Systems Change Students’ Learning Behaviors? A Case Study with Postgraduate Students
+										A Taxonomy of Game Elements for Gamification in Educational Contexts: Proposal and Evaluation
 									</h3>
 									<h4>
 										<span class="year">
-											2018
+											2019
 										</span>
 										<span class="authors">
-											Wilk dos Santos, Armando Toda, Ig Bittencourt, Seiji Isotani
-										</span>
-									</h4>
+										Armando M. Toda, Wilk Oliveira, Ana C. Klock, Paula T. Palomino, Marcelo Pimenta, Isabela Gasparini, Lei Shi, Ig Bittencourt, Seiji Isotani and Alexandra I. Cristea 									</h4>
 									<p class="abstract">
-										In the last few years, gamification studies have increased in the field of education and digital technologies, showing different results on the use of gamified educational systems in relation to students’ learning aspects. These studies, however, often keep the focus on quantitative or qualitative approaches directly related to student learning, without considering students’ perceptions of the gamification design and how the gamification design aspects of the system can influence positively the students’ behavior change. Therefore, this study compared a gamified with a non-gamified version of an educational system, through a mixed (quantitative and qualitative) approach to identify if gamified educational systems are better than non-gamified educational systems to provide positive students’ learning behavior change. The results confirmed that the gamified educational system was more effective than the non-gamified system.
+										Gamification has been widely employed in the educational domain over the past eight years when the term became a trend. However, the literature states that gamification still lacks formal definitions to support the design of gamified strategies. This paper aims to create a taxonomy for the game elements, based on gamification experts' opinions. After a brief review from existing work, we extract first the game elements from the current state of the art, and then evaluate them via a survey with 19 gamification and education experts. The resulting taxonomy taxonomy included the description of 21 game elements and their quantitative and qualitative evaluation by the experts. Overall, the proposed taxonomy was in general well accepted by most of the experts. They also suggested expanding it with the inclusion of Narrative and Storytelling game elements. Thus, the main contribution of this paper is proposing a new, confirmed taxonomy to standardise the terminology used to define the game elements as a mean to design and deploy gamification strategies in the educational domain.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/329982254_Does_Gamified_Educational_Systems_Change_Students'_Learning_Behaviors_A_Case_Study_with_Postgraduate_Students">
+										<a href="https://www.researchgate.net/publication/334480768_A_Taxonomy_of_Game_Elements_for_Gamification_in_Educational_Contexts_Proposal_and_Evaluation">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -184,21 +182,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										An approach for planning and deploying gamification concepts with social networks within educational contexts
+										Narrative for Gamification in Education: Why Should you Care?
 									</h3>
 									<h4>
 										<span class="year">
-											2018
+											2019
 										</span>
 										<span class="authors">
-											Armando Toda, Ricardo do Carmo, Alan da Silva, Ig Bittencourt, Seiji Isotani
+											Paula T. Palomino, Armando M. Toda, Wilk Oliveira, Alexandra I. Cristea and Seiji Isotani
 										</span>
 									</h4>
 									<p class="abstract">
-										Gamification planning has been a topic of discussion in the last years since it can be used to increase performance, engagement, and motivation of end users. When properly applied in educational settings, gamification can lead to better learning. Furthermore, it can be boosted when tied to social networks. However, according to the literature, there are three main concerns regarding this topic: (a) instructors and teachers does not have the resources to plan and develop gamification strategies into their classes; (b) gamification needs a systematic approach to achieve the desired positive results; and (c) inexistence of systematic approaches that connect and help in the design of gamification and social network tasks within these contexts. Thus, this work proposes a solution to help instructors and teachers to plan and deploy gamification concepts with social network features in learning environments. In this paper, we detailed our approach depicting the set of items to analyze and compare it with other solutions that are focused on education. Then, it was conducted a case study over a programming course (N = 40) to analyze the planning and deployment phases. Our results demonstrated that our approach is the first to consider the stakeholders (i.e. instructors and teachers) as part of the process. Moreover, even though there are still some obstacles to overcome, the gamified strategies that were created achieved positive acceptance among the students and professor.
+										Gamification applied to education studies are fo-cusing to encourage students to perform specific tasks, however many of these studies are still inconclusive about how much gam-ification can influence engagement. Also, the frameworks used to apply gamification in those systems are mainly structural (e.g. scoring and ranking systems) rather than content frameworks (where the game elements are applied to the content). Therefore, this paper aims at creating a narrative definition exclusively for gamification purposes. First, we developed an empirical research starting with a literature review of the narrative concept in other medias, such as games. Then, we mapped these definitions into features and crossed the similarities and differences across them, to find a common ground that could be applied in gamification contexts. Our results show that the narrative element definition to use in gamification contexts best drifts from the games ones, however its definition is unique to the point it could be isolated and used in future frameworks. We also found that the characteristics of this concept resembles some of User Experience.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/328548218_An_approach_for_planning_and_deploying_gamification_concepts_with_social_networks_within_educational_contexts">
+										<a href="https://www.researchgate.net/publication/335570867_Narrative_for_Gamification_in_Education_Why_Should_you_Care">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -208,21 +206,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Frameworks para o Planejamento da Gamificação em Contextos Educacionais - Uma revisão da literatura nacional
+										Planning Gamification Strategies based on User Characteristics and DM: A Gender-based Case Study
 									</h3>
 									<h4>
 										<span class="year">
-											2018
+											2019
 										</span>
 										<span class="authors">
-											Armando Toda, Wilk dos Santos, Ana C. Klock, Ig Bittencourt, Isabela Gasparini, Seiji Isotani
+											Armando Toda, Wilk dos Santos, Lei Shi, Ig Bittencourt, Seiji Isotani and Alexandra I. Cristea
 										</span>
 									</h4>
 									<p class="abstract">
-										A gamificação tem sido bastante utilizada para aumentar o engajamento e a motivação dos estudantes em contextos educacionais, ampliando o interesse por parte de professores e instrutores. No entanto, há um consenso na literatura quanto a necessidade de abordagens sistemáticas (métodos, processos e/ou frameworks) para apoiar o planejamento da gamificação, de modo que os seus efeitos benéficos sejam alcançados. A literatura identifica alguns estudos internacionais focados em analisar estas abordagens sistemáticas, no entanto, há uma carência de estudos que relatem como o Brasil tem contribuído para o processo de planejamento da gamificação. Diante disso, esse artigo tem por objetivo apresentar um mapeamento sistemático da literatura, visando identificar as abordagens sistemáticas existentes para o planejamento da gamificação em escala nacional. A partir da condução desse mapeamento, foram encontrados 18 estudos onde foram identificados: (a) uma carência no apoio automatizado para o docente; (b) uma classificação dos tipos de personalização utilizados; e (c) a quantidade de elementos de gamificação utilizados. Por meio dos resultados obtidos, foi possível identificar ainda diversos desafios e oportunidades relacionados a esta área de pesquisa.
+										Gamification frameworks can aid in gamification planning for education. Most frameworks, however, do not provide ways to select, relate or recommend how to use game elements , to gamify a certain educational task. Instead, most provide a "one-size-fits-all" approach covering all learners, without considering different user characteristics, such as gender. Therefore, this work aims to adopt a data-driven approach to provide a set of game element recommendations , based on user preferences, that could be used by teachers and instructors to gamify learning activities. We analysed data from a novel survey of 733 people (male=569 and female=164), collecting information about user preferences regarding game elements. Our results suggest that the most important rules were based on four (out of nineteen) types of game elements: Objectives, Levels, Progress and Choice. From the perspective of user gender, for the female sample, the most interesting rule associated Objectives with Progress, Badges and Information (confidence=0.97), whilst the most interesting rule for the male sample associated also Objectives with Progress, Renovation and Choice (confidence=0.94). These rules and our descriptive analysis provides recommendations on how game elements can be used in educational scenarios.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/329982324_Frameworks_para_o_Planejamento_da_Gamificacao_em_Contextos_Educacionais-Uma_revisao_da_literatura_nacional">
+										<a href="https://www.researchgate.net/publication/334398106_Planning_Gamification_Strategies_based_on_User_Characteristics_and_DM_A_Gender-based_Case_Study">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -358,7 +356,7 @@
 						</div>	
 					</div>
 
-					<!-- EXIPERIÊNCIAS -->
+					<!-- EXIPERIÊNCIAS E PRÊMIOS -->
 					<div class="experience">
 						<div class="col-md-12">
 							<h2>Experiences</h2>
@@ -392,7 +390,28 @@
 								</div>
 							</div>
 						</div>
+						
+						<div class="awards">
+						<div class="col-md-12">
+							<h2>Awards</h2>
+							<div class="divisor"><i class="fa fa-trophy" aria-hidden="true"></i></div>
+						</div>
+						<div class="col-lg-12">
+							<div class="row">
+								<div class="item col-md-12">
+									<div class="conference"><b>ICALT 2019</b></div>
+									<p class="description">
+										Best Paper Award at the 2019 IEEE 19th International Conference on Advanced Learning Technologies (ICALT) @ Maceió
+									</p>
+								</div>								
+							</div>
+						</div>
 					</div>
+						
+					</div>
+
+
+
 
 					<div class="col-md-12 text-center markup">
 						<i class="fa fa-bookmark-o" aria-hidden="true"></i>
