--- a/index.html
+++ b/index.html
@@ -182,21 +182,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Narrative for Gamification in Education: Why Should you Care?
+										Validating the Effectiveness of Data-Driven Gamification Recommendations: An Exploratory Study
 									</h3>
 									<h4>
 										<span class="year">
 											2019
 										</span>
 										<span class="authors">
-											Paula T. Palomino, Armando M. Toda, Wilk Oliveira, Alexandra I. Cristea and Seiji Isotani
+											Armando M. Toda, Paula T. Palomino, Luiz Rodrigues, Wilk Oliveira, Lei Shi, Seiji Isotani and Alexandra I. Cristea
 										</span>
 									</h4>
 									<p class="abstract">
-										Gamification applied to education studies are fo-cusing to encourage students to perform specific tasks, however many of these studies are still inconclusive about how much gam-ification can influence engagement. Also, the frameworks used to apply gamification in those systems are mainly structural (e.g. scoring and ranking systems) rather than content frameworks (where the game elements are applied to the content). Therefore, this paper aims at creating a narrative definition exclusively for gamification purposes. First, we developed an empirical research starting with a literature review of the narrative concept in other medias, such as games. Then, we mapped these definitions into features and crossed the similarities and differences across them, to find a common ground that could be applied in gamification contexts. Our results show that the narrative element definition to use in gamification contexts best drifts from the games ones, however its definition is unique to the point it could be isolated and used in future frameworks. We also found that the characteristics of this concept resembles some of User Experience.
+										Gamification design has benefited from data-driven approaches to creating strategies based on students' characteristics. However, these strategies need further validation to verify their effectiveness in e-learning environments. The exploratory study presented in this paper thus aims at verifying how data-driven gamified strategies are perceived by the students, i.e., the users of e-learning environments. In this study, we conducted a survey presenting 25 predefined strategies, based on a previous study, to students and analysed each strategy's perceived relevance, instanced in an e-learning environment. Our results show that students perceive Acknowledgement, Objective and Progression as important elements in a gamified e-learning environment. We also provide new insights about existing elements and design recommendations for domain specialists.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/335570867_Narrative_for_Gamification_in_Education_Why_Should_you_Care">
+										<a href="https://www.researchgate.net/publication/337199317_Validating_the_Effectiveness_of_Data-Driven_Gamification_Recommendations_An_Exploratory_Study">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -206,21 +206,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Planning Gamification Strategies based on User Characteristics and DM: A Gender-based Case Study
+										Exploring Content Game Elements to Support Gamification Design in Educational Systems: Narrative and Storytelling
 									</h3>
 									<h4>
 										<span class="year">
 											2019
 										</span>
 										<span class="authors">
-											Armando Toda, Wilk dos Santos, Lei Shi, Ig Bittencourt, Seiji Isotani and Alexandra I. Cristea
+											Paula T. Palomino, Armando M. Toda, Wilk Oliveira, Luiz Rodrigues, Alexandra I. Cristea and Seiji Isotani
 										</span>
 									</h4>
 									<p class="abstract">
-										Gamification frameworks can aid in gamification planning for education. Most frameworks, however, do not provide ways to select, relate or recommend how to use game elements , to gamify a certain educational task. Instead, most provide a "one-size-fits-all" approach covering all learners, without considering different user characteristics, such as gender. Therefore, this work aims to adopt a data-driven approach to provide a set of game element recommendations , based on user preferences, that could be used by teachers and instructors to gamify learning activities. We analysed data from a novel survey of 733 people (male=569 and female=164), collecting information about user preferences regarding game elements. Our results suggest that the most important rules were based on four (out of nineteen) types of game elements: Objectives, Levels, Progress and Choice. From the perspective of user gender, for the female sample, the most interesting rule associated Objectives with Progress, Badges and Information (confidence=0.97), whilst the most interesting rule for the male sample associated also Objectives with Progress, Renovation and Choice (confidence=0.94). These rules and our descriptive analysis provides recommendations on how game elements can be used in educational scenarios.
+										Several studies on gamification applied to educational systems aim at encouraging students to do certain tasks and improving their learning. According to the literature, most gamification frameworks are structural (e.g. scoring systems, ranking, etc.), with few content-related frameworks. To the best of our knowledge, there is no narrative framework available. Therefore this paper analyses data obtained from a survey about the students' preferred game elements in an educational context, with focus on Association Rules found concerning Narrative and Storytelling elements. We show that Narrative and Story-telling are tightly related and provide insights of their use in groups with other game elements, enabling the creation of gamified strategies based on these aspects .
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/334398106_Planning_Gamification_Strategies_based_on_User_Characteristics_and_DM_A_Gender-based_Case_Study">
+										<a href="https://www.researchgate.net/publication/337199414_Exploring_Content_Game_Elements_to_Support_Gamification_Design_in_Educational_Systems_Narrative_and_Storytelling">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -230,21 +230,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										The Dark Side of Gamification: An Overview of Negative Effects of Gamification in Education
+										Thinking Inside the Box: How to Tailor Gamified Educational Systems Based on Learning Activities Types
 									</h3>
 									<h4>
 										<span class="year">
-											2018
+											2019
 										</span>
 										<span class="authors">
-											Armando Toda, Pedro H. Valle, Seiji Isotani
+											Luiz Rodrigues, Wilk Oliveira, Armando M. Toda, Paula T. Palomino and Seiji Isotani
 										</span>
 									</h4>
 									<p class="abstract">
-										Gamification has a great number of studies in the education area since the emergence of the term. However, there is a lack of primary and secondary studies that explore the negative effects that gamification may have on learners, and lack of studies that analyze the gamification design that are linked to those negative effects. Based on this premise, we aim at answering the following research question “What are the negative effects that can occur in gamification when applied to educational contexts?”. We seek to answer this question by analyzing the negative effects that are associated to gamification and the gamified learning design that are linked with them. To answer this question, we conducted a systematic mapping study to identify these negative effects. Based on the studies that were analyzed, we identified and mapped 4 negative effects and their gameful design. Loss of Performance was the most occurring effect and Leaderboard the most cited game design element, among other 11 elements. Moreover, elements and effects were linked in order to identify how these elements may have influenced on these outcomes. Based on our results, we found out that the game design may lead to a negative impact. For instance, Leaderboards are strongly associated to many negative effects mapped in this work. This result is corroborated by the psychology literature regarding ranking systems within learning environments. We believe our work may be useful to guide gamification instructors and specialists to avoid those negative effects in education contexts, by avoiding some game design elements settings.
+										Selecting gamification elements suitable for specific players (personalization) has been sought to improve the impacts of Gamified Educational Systems (GES). However, the lack of context might be a factor on the inconsistent results of those approaches. To address this lack, we introduce a method for personalizing GES based on learning activities types. The assumption is that selecting gamification elements for specific types of learning activities has the potential to improve GES impact on users by considering the context of each activity and, thus, contributing to their learning process. We describe how to apply our approach, how it differs from user-based methods, as well as discuss three cases of application and challenges yet to be tackled.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/326876949_The_Dark_Side_of_Gamification_An_Overview_of_Negative_Effects_of_Gamification_in_Education">
+										<a href="https://www.researchgate.net/publication/337199519_Thinking_Inside_the_Box_How_to_Tailor_Gamified_Educational_Systems_Based_on_Learning_Activities_Types">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -304,7 +304,7 @@
 										</p>
 										<p class="title">
 											Title: Computational framework for designing gamification in educational environments
-											Supervision: Dr. Seiji Isotani
+											Supervision: Dr. Seiji Isotani and Dr. Alexandra I. Cristea
 										</p>
 									</div>
 								</li>
