--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<h2>About me</h2>
 							<div class="divisor"><i class="fa fa-user" aria-hidden="true"></i></div>
 							<p>
-							I'm a PhD. student at University of Sao Paulo (USP). Currently a visiting student at Durham University (DU). Got a Bachelor in Computer Sciences at Centro Universitario do Para (CESUPA) and a Master of Sciences degree at Londrina State University (UEL). I've worked in different areas as Image Processing, Computer Graphics, Digital Games, Game-based-learning, Gamification, Artificial Intelligence and Education. My desire is to show the world the benefits games can offer to improve the way we learn and teach.
+							I'm a PhD. student at University of Sao Paulo (USP). Former visiting student at Durham University (DU). Have a Bachelor in Computer Sciences at Centro Universitario do Para (CESUPA) and a Master of Sciences degree at Londrina State University (UEL). I've worked in different areas as Image Processing, Computer Graphics, Digital Games, Game-based-learning, Gamification, Artificial Intelligence, Computational Thinking, and Education. My desire is to show the world the benefits offered by games as tools to motivate, engage, and make the world a better place.
 							</p>
 						</div>
 						<!-- REDES SOCIAIS -->
@@ -145,6 +145,11 @@
 									<i class="fa fa-cogs" aria-hidden="true"></i>
 									<h4>Artificial Intelligence</h4>
 								</div>
+								<div class="item col-xs-6 col-sm-4 col-md-3">
+									<i class="fa fa-laptop" aria-hidden="true"></i>
+									<h4>Computational Thinking</h4>
+								</div>
+
 							</div>
 						</div>
 					</div>
@@ -268,6 +273,29 @@
 										<i class="fa fa-bookmark" aria-hidden="true"></i>
 									</div>
 									<div class="col-xs-12 col-sm-11">
+										<h4>PhD. in Computer Science</h4>
+										<p>
+											<span class="date">
+												<i class="fa fa-calendar" aria-hidden="true"></i>
+												2016 - Now
+											</span>
+											<span class="univesity">
+												<i class="fa fa-university" aria-hidden="true"></i>
+												University of Sao Paulo
+											</span>
+										</p>
+										<p class="title">
+											Title: Computational framework for designing gamification in educational environments
+											Supervision: Dr. Seiji Isotani and Dr. Alexandra I. Cristea
+										</p>
+									</div>
+								</li>
+
+								<li class="item row">
+									<div class="point col-sm-1 hidden-xs">
+										<i class="fa fa-bookmark" aria-hidden="true"></i>
+									</div>
+									<div class="col-xs-12 col-sm-11">
 										<h4>Visiting PhD. Student</h4>
 										<p>
 											<span class="date">
@@ -286,28 +314,6 @@
 									</div>
 								</li>
 
-								<li class="item row">
-									<div class="point col-sm-1 hidden-xs">
-										<i class="fa fa-bookmark" aria-hidden="true"></i>
-									</div>
-									<div class="col-xs-12 col-sm-11">
-										<h4>PhD. in Computer Science</h4>
-										<p>
-											<span class="date">
-												<i class="fa fa-calendar" aria-hidden="true"></i>
-												2016 - Now
-											</span>
-											<span class="univesity">
-												<i class="fa fa-university" aria-hidden="true"></i>
-												University of Sao Paulo
-											</span>
-										</p>
-										<p class="title">
-											Title: Computational framework for designing gamification in educational environments
-											Supervision: Dr. Seiji Isotani and Dr. Alexandra I. Cristea
-										</p>
-									</div>
-								</li>
 								<li class="item row">
 									<div class="point col-sm-1 hidden-xs">
 										<i class="fa fa-bookmark" aria-hidden="true"></i>
